Fixed alignment of text.

--- a/index.css
+++ b/index.css
@@ -51,6 +51,7 @@ p {
 .user-sect {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 4px;
 }
 
